--- a/index.html
+++ b/index.html
@@ -8,6 +8,92 @@
     <title>Static Layout</title>
 </head>
 <body>
-    <h1>Deployed!</h1>  
+    <div class="wrapper">
+        <div><img src="C:\ElevenFiftyProjects\JavaScript-Library\projects\staticLayout\assets\background.jpg" class="background">
+            <div class="navBar">
+                <div class="navLink">
+                    <a href="https://signup.hulu.com/plans" id="logIn" target="_blank"><br>LOG IN</a>
+                </div>
+            </div>
+            <div class="middle">
+                <div class="middleTop"><h5>TRY UP TO ONE MONTH FREE</h5></div>
+                <div class="huluLogo"><img src="C:\ElevenFiftyProjects\JavaScript-Library\projects\staticLayout\assets\hulu logo.png" width= 45% alt="Hulu Logo"></div>
+                <div class="middleMiddle">Watch thousands of shows and movies, with plans starting at<br>$5.99/month.</div>
+                <div class="startTrial">
+                    <a href="https://signup.hulu.com/plans" id="freeTrial" target="_blank">
+                    <button class="freeTrialButton">START YOUR FREE TRIAL</button></a>
+                </div>
+                <div class="disclaimer">Free trial for new & eligible returning subscribers only.</div>
+            </div>
+            <div class="banner">
+                <img src="C:\ElevenFiftyProjects\JavaScript-Library\projects\staticLayout\assets\huluDisneyEspn.png" id="bundleChannels" alt="Bundle Channels">
+                <div id="bundle">
+                    <div class="middleTop"><h5>BUNDLE WITH ANY HULU PLAN & SAVE</h5></div>
+                    <div id="bundleDetails"><h4>Get Hulu, Disney+, and ESPN+ starting at $13.99/month.*</h4></div>
+                    <div class="detailLink"><a href="https://www.hulu.com/welcome#bundle_details" target="_blank">Details</a></div>
+                </div>
+                <div class="getBundle">
+                    <a href="https://www.hulu.com/disney-bundle-3" id="bundle" target="_blank">
+                    <div class="bundleButton"><button>GET BUNDLE</button></div></a>
+                    <div class="terms"><a href="https://www.hulu.com/terms/disney-bundle" target="_blank">Terms apply</a></div>
+                </div>
+            </div>
+        </div>
+        <div class="library">
+            <div class="libraryHeader">
+                <div class="middleTop"><h5>INCLUDED IN ALL PLANS</h5></div>
+                <div class="libraryTitle">All The TV You Love</div>
+                <div class="librarySub"><h4>Stream full seasons of exclusive series, current-season episodes, hit movies, Hulu<br>Originals, kids shows, and more.</h4></div>
+            </div>
+            <div class="grid">
+                <div class="demo">
+                    <div class="shape">
+                        <div class="outline">
+                            <div class="info">
+                                <h4>Past & Current Seasons</h4>
+                                <h3>TV Shows</h3>
+                            </div>
+                        </div>
+                        <img src="C:\ElevenFiftyProjects\JavaScript-Library\projects\staticLayout\assets\bobsBurgers.jpg" alt="Bob's Burgers">
+                    </div>
+                </div>
+                <div class="demo">
+                    <div class="shape">
+                        <div class="outline">
+                            <div class="info">
+                                <h4>New & Classic</h4>
+                                <h3>Movies</h3>
+                            </div>
+                        </div>
+                        <img src="C:\ElevenFiftyProjects\JavaScript-Library\projects\staticLayout\assets\billieHoliday.jpg" alt="The United States vs Billie Holiday">
+                    </div>
+                </div>
+                <div class="demo">
+                    <div class="shape">
+                        <div class="outline">
+                            <div class="info">
+                                <h4>Groundbreaking</h4>
+                                <h3>Hulu Originals</h3>
+                            </div>
+                        </div>
+                        <img src="C:\ElevenFiftyProjects\JavaScript-Library\projects\staticLayout\assets\solarOpposites.jpg" alt="Solar Opposites">
+                    </div>
+                </div>
+                <div class="demo">
+                    <div class="shape">
+                        <div class="outline">
+                            <div class="info">
+                                <h4>Add-on</h4>
+                                <h3>Premiums</h3>
+                            </div>
+                        </div>
+                        <img src="C:\ElevenFiftyProjects\JavaScript-Library\projects\staticLayout\assets\cityOnAHill.jpg" alt="City On A Hill">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
+
+
