final final version

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <div><img src="C:\ElevenFiftyProjects\JavaScript-Library\projects\staticLayout\assets\background.jpg" class="background">
+        <div><img src="./assets/background.jpg" class="background">
             <div class="navBar">
                 <div class="navLink">
                     <a href="https://signup.hulu.com/plans" id="logIn" target="_blank"><br>LOG IN</a>
@@ -17,7 +17,7 @@
             </div>
             <div class="middle">
                 <div class="middleTop"><h5>TRY UP TO ONE MONTH FREE</h5></div>
-                <div class="huluLogo"><img src="C:\ElevenFiftyProjects\JavaScript-Library\projects\staticLayout\assets\hulu logo.png" width= 45% alt="Hulu Logo"></div>
+                <div class="huluLogo"><img src="./assets/hulu logo.png" width= 45% alt="Hulu Logo"></div>
                 <div class="middleMiddle">Watch thousands of shows and movies, with plans starting at<br>$5.99/month.</div>
                 <div class="startTrial">
                     <a href="https://signup.hulu.com/plans" id="freeTrial" target="_blank">
@@ -26,7 +26,7 @@
                 <div class="disclaimer">Free trial for new & eligible returning subscribers only.</div>
             </div>
             <div class="banner">
-                <img src="C:\ElevenFiftyProjects\JavaScript-Library\projects\staticLayout\assets\huluDisneyEspn.png" id="bundleChannels" alt="Bundle Channels">
+                <img src="./assets/huluDisneyEspn.png" id="bundleChannels" alt="Bundle Channels">
                 <div id="bundle">
                     <div class="middleTop"><h5>BUNDLE WITH ANY HULU PLAN & SAVE</h5></div>
                     <div id="bundleDetails"><h4>Get Hulu, Disney+, and ESPN+ starting at $13.99/month.*</h4></div>
@@ -54,7 +54,7 @@
                                 <h3>TV Shows</h3>
                             </div>
                         </div>
-                        <img src="C:\ElevenFiftyProjects\JavaScript-Library\projects\staticLayout\assets\bobsBurgers.jpg" alt="Bob's Burgers">
+                        <img src="./assets/bobsBurgers.jpg" alt="Bob's Burgers">
                     </div>
                 </div>
                 <div class="demo">
@@ -65,7 +65,7 @@
                                 <h3>Movies</h3>
                             </div>
                         </div>
-                        <img src="C:\ElevenFiftyProjects\JavaScript-Library\projects\staticLayout\assets\billieHoliday.jpg" alt="The United States vs Billie Holiday">
+                        <img src="./assets/billieHoliday.jpg" alt="The United States vs Billie Holiday">
                     </div>
                 </div>
                 <div class="demo">
@@ -76,7 +76,7 @@
                                 <h3>Hulu Originals</h3>
                             </div>
                         </div>
-                        <img src="C:\ElevenFiftyProjects\JavaScript-Library\projects\staticLayout\assets\solarOpposites.jpg" alt="Solar Opposites">
+                        <img src="./assets/solarOpposites.jpg" alt="Solar Opposites">
                     </div>
                 </div>
                 <div class="demo">
@@ -87,7 +87,7 @@
                                 <h3>Premiums</h3>
                             </div>
                         </div>
-                        <img src="C:\ElevenFiftyProjects\JavaScript-Library\projects\staticLayout\assets\cityOnAHill.jpg" alt="City On A Hill">
+                        <img src="./assets/cityOnAHill.jpg" alt="City On A Hill">
                     </div>
                 </div>
             </div>
